provisioning/kubernetes/templates/aws/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: templates-api
  name: templates-api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: templates-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
