provisioning/kubernetes/templates/aws/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: templates-api
  namespace: default
spec:
  rules:
    - host: "templates.${HOSTNAME_SUFFIX}"
      http:
        paths:
          - backend:
              serviceName: templates-api
              servicePort: 80
            path: /
